...
                        ),
                        modifier = Modifier.clickable {
                            if (expandedSheetState.value != ExpandedSheetState.Next7Days)
                                expandedSheetState.value = ExpandedSheetState.Next7Days
                            else
                                expandedSheetState.value = ExpandedSheetState.Today
                        }.testTag(tag = "Next7DaysTextButton")
                    )
                }
            Column(
                modifier = Modifier
                    .fillMaxSize()
                    .animateContentSize(),
...
