...
                                temperatureType.value = TemperatureType.Celsius
                            else
                                temperatureType.value = TemperatureType.Fahrenheit
                        },
                        modifier = Modifier.semantics {
                            contentDescription = if (!convertToFahrenheit)"Celsius to Fahrenheit" else "Fahrenheit to Celsius"
                        }.testTag(tag = "changeTemperatureButton")
                    ) {
                        Text(
                            "C°",
                            style = myStyle.copy(
                                fontSize = 16.sp,
                                fontWeight = FontWeight.Medium,
...
