...
            Column(
                modifier = Modifier
                    .fillMaxSize()
                    .padding(top = 36.dp)
            ) {
                Text(
                    stringResource(id = R.string.next_7_days), modifier = Modifier.fillMaxWidth().testTag("next7Days"),
                    style = myStyleBlackColor.copy(
                        fontSize = 19.sp,
                        fontWeight = FontWeight.SemiBold,
                        textAlign = TextAlign.Center
                    )
                )
...
